Gradient boosting model with cross validation score

--- a/ADA_Gradient_Boosting_Model.ipynb
+++ b/ADA_Gradient_Boosting_Model.ipynb
@@ -514,28 +514,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-65-8a5f3555a78e>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-65-8a5f3555a78e>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    fn.gbt(X_train, X_test, y_train, y_test)`\u001b[0m\n\u001b[0m                                            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean GBT Cross-Val Score (k=10):\n",
+      "train: 0.9389865362228162, test: 0.8788003509316346\n"
      ]
     }
    ],
    "source": [
-    "fn.gbt(X_train, X_test, y_train, y_test)`"
+    "fn.gbt(X_train, X_test, y_train, y_test)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "According to cross validation score, gradient boosting performs higher train and test accuracy. "
+   ]
   }
  ],
  "metadata": {
